Added functions of Resign Button, need game over logic for both winning side and losing side.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -80,7 +80,7 @@
           <label>PGN:</label>
           <div class="pgn" id="pgn_1"></div>
           <button id="forkButton_1" class="btn btn-success" onclick="sendForkRequest(this.parentNode.parentNode.parentNode)" disabled="true" hidden="true">Fork</button>
-            <button id="resignButton_1" class="btn btn-success">Resign</button>
+            <button id="resignButton_1" class="btn btn-success" onclick="sendResignRequest(this.parentNode.parentNode.parentNode)">Resign</button>
             <button id="drawButton_1" class="btn btn-success">Offer Draw</button>
             <button id="DLButton_1" class="btn btn-success">DL Game</button>
           </div>
