Added function of Queue (Server side) and manually called connect() to automate roomId selection. Added a match() in server code to be latter used for the matching algo.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -57,7 +57,7 @@
         <div style="margin: auto">
 
           <div id="player"></div>
-          <div id="roomNumbers">Enter a room number between 0 and 99</div>-->
+<!--          <div id="roomNumbers">Enter a room number between 0 and 99</div>-->
           <form>
             <div class="row">
               <div class="col">
