--- a/games.html
+++ b/games.html
@@ -49,7 +49,12 @@
   </div>
   <div class="container">
     <div class="game" id="game_1">
+        <div id="opponentTimer_1" style="text-align: center">
+          <div class="values"></div>
+        </div>
+
         <div class="board" id="board_1" style="width: 300px; margin: auto"></div>
+
         <div id="timer_1" style="text-align: center">
           <div class="values"></div>
         </div>
