Added methods for game over general logic.

--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Chess 0</title>
-  <!--  Including the chessboardjs files:-->
+  <!--  Including the chessboard.js files:-->
   <!-- <script src="chess.js"></script>  -->
   <link rel="stylesheet" 
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
