Fixed a bug in time increment method, removed extra eventlistener. update a new button at homepage just for testing purpose.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -44,9 +44,13 @@
   <!-- <script>
     var socket = io();
   </script> -->
+  <div id="player"></div>
+  <div id="state">Join Game</div>
   <div id="forkCount" hidden="true">
   <strog></strog>
   </div>
+  <button id="DLButton" class="btn btn-success" hidden="true">DL Game</button>
+
   <div class="container">
     <div class="game" id="game_1">
         <div id="opponentTimer_1" style="text-align: center">
@@ -60,8 +64,6 @@
         </div>
 
         <div style="margin: auto">
-
-          <div id="player"></div>
 <!--          <div id="roomNumbers">Enter a room number between 0 and 99</div>-->
           <form>
             <div class="row">
@@ -75,7 +77,7 @@
             </div>
           </form>
 
-          <div id="state">Join Game</div>
+
           <br>
 
           <div class="hidden" hidden="true">
@@ -90,7 +92,6 @@
           <button id="forkButton_1" class="btn btn-success f_btn" onclick="sendForkRequest(this.parentNode.parentNode.parentNode)" disabled="true" hidden="true">Fork</button>
             <button id="resignButton_1" class="btn btn-success" onclick="sendResignRequest(this.parentNode.parentNode.parentNode)">Resign</button>
             <button id="drawButton_1" class="btn btn-success" onclick="offerDraw(this.parentNode.parentNode.parentNode)">Offer Draw</button>
-            <button id="DLButton_1" class="btn btn-success">DL Game</button>
           </div>
       </div>
       <br><br>
