--- a/homepage.html
+++ b/homepage.html
@@ -52,7 +52,8 @@
         	<br>
         	<div class="style_time_btn">
         		Choose Your Game Style And Time Limitation: <br>
-        		<label class="game_style"> Bullet: </label> 
+        		<label class="game_style"> Bullet: </label>
+				<input type="radio" name="style_time" value="bullet_1+2*1" > Test 1+1*1&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="bullet_1+0*0" checked> 1+0*0&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="bullet_2+1*0"> 2+1*0&nbsp;&nbsp;
         		<br>
