Push for testing
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/forgot.html
+++ b/forgot.html
@@ -40,7 +40,7 @@
 	<input class="in" type="text" placeholder="Password" name="password"> -->
 	<br>
 	<button style="margin: 10px; width: 100px">Retrieve</button>
-	<button style="margin: 10px; width: 100px">Cancle</button>
+	<button style="margin: 10px; width: 100px" onclick="location.href='./login.html'">Cancle</button>
 	<br>
 	<br>
 	<br>
