--- a/login.html
+++ b/login.html
@@ -31,6 +31,9 @@
 	</style>
 </head>
 <body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 	<img class="logo" src="https://cdn.shopify.com/shopifycloud/hatchful-web/assets/6fcc76cfd1c59f44d43a485167fb3139.png" style="width: 250px">
 	<h1>Login</h1>
 	<label class="lb">User Name:</label>
@@ -48,5 +51,8 @@
 	<label class="console">This is a place to display console message.</label>
 	<br><br><br><br>
 	<div class="description">some description</div>
+
+
+	<script src="./login.js"></script>
 </body>
 </html>
