Finished the signIn() function in login.html.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
 		}
 		.console{
 			margin-left: 10px;
+			font-size: 14px;
 		}
 		.description{
 			text-align: center;
@@ -48,7 +49,7 @@
 	<a style="margin: 10px" href="./forgot.html"> Forgot UserName/Password</a>
 	<br>
 	<br>
-	<label class="console">This is a place to display console message.</label>
+	<label id="msg" class="console"></label>
 	<br><br><br><br>
 	<div class="description">some description</div>
 
