Fixed a version control problem, this is the base version now.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 	<input class="in" type="text" placeholder="Password" name="password" id="password">
 	<br>
 	<button style="margin: 10px; width: 100px"  onclick="signIn()">Sign In </button>
-	<button style="margin: 10px; width: 100px" onclick="signUp()">Sign Up</button>
+	<button style="margin: 10px; width: 100px" onclick="location.href='./forgot.html'">Sign Up</button>
 	<br>
 	<a style="margin: 10px" href="./forgot.html"> Forgot UserName/Password</a>
 	<br>
