--- a/homepage.html
+++ b/homepage.html
@@ -16,10 +16,10 @@
 <div id="center">
     <div id="sidebar-l">
     	<h1 id="user">User Name: FakeUser123</h1> <br>
-    	<button class="side-l">Profile/Statistics</button><br>
-    	<button class="side-l">Challenges</button><br>
-    	<button class="side-l">Top Rankings</button><br>
-    	<button class="side-l">Log Out</button><br>
+		<button class="side-l" id="profile" onclick="displayPlayerProfile()">Profile/Statistics</button><br>
+		<button class="side-l" id="challenges" onclick="displayChallenges()">Challenges</button><br>
+		<button class="side-l" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
+		<button class="side-l" id="logOut" onclick="onLogOut()">Log Out</button><br>
     </div>
     <div id="main-wrapper">
         <div id="main">
