--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
 	<input id="password" class="in" type="text" placeholder="Password" name="password">
 	<br>
 	<button style="margin: 10px; width: 100px" onclick="signUp()">Confirm</button>
-	<button style="margin: 10px; width: 100px" onclick="location.href='./'">Cancle</button>
+	<button style="margin: 10px; width: 100px" onclick="location.href='./'">Cancel</button>
 	<br>
 	<br>
 	<br>
