--- a/top_ranking.html
+++ b/top_ranking.html
@@ -7,6 +7,7 @@
 	
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <div id="header">
 	<img class="logo" src="https://cdn.shopify.com/shopifycloud/hatchful-web/assets/6fcc76cfd1c59f44d43a485167fb3139.png" style="height: 100%;">
 </div>
@@ -102,8 +103,9 @@
         		</tr>
 
         	</table>
+		</div>
+	</div>
 </div>
-
 <div id="footer"></div>
 </body>
 </html>
