Finished the ELO_rating calculation, now it is good for both aggregate and independent versions.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -43,6 +43,7 @@
   <div id="forkCount" hidden="true">
   <strog></strog>
   </div>
+  <label id="elo" hidden="true" style="font-weight: bold"></label><br>
   <button id="DLButton" class="btn btn-success" hidden="true" onclick="downloadGame()">DL Game</button>
   <div class="container">
     <div class="game" id="game_1">
