Updated logo.jgp and html files to display logo.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/forgot.html
+++ b/forgot.html
@@ -31,7 +31,7 @@
 	</style>
 </head>
 <body>
-	<img class="logo" src="https://cdn.shopify.com/shopifycloud/hatchful-web/assets/6fcc76cfd1c59f44d43a485167fb3139.png" style="width: 250px">
+<img class="logo" src="./img/logo.jpg" style="width: 150px; height: 200px">
 	<h1>Forgot UserName/Password</h1>
 	<label class="lb">Email:</label>
 	<input class="in" type="text" placeholder="Email Address" name="email">
