--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <div id="header">
-	<img class="logo" src="https://cdn.shopify.com/shopifycloud/hatchful-web/assets/6fcc76cfd1c59f44d43a485167fb3139.png" style="height: 100%;">
+	<img class="logo" src="./img/logo.jpg" style="height: 100%; padding-left: 60px;margin-top: 5px">
 </div>
 <div id="center">
     <div id="sidebar-l">
