--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<img class="logo" src="https://cdn.shopify.com/shopifycloud/hatchful-web/assets/6fcc76cfd1c59f44d43a485167fb3139.png" style="width: 250px">
+	<img class="logo" src="./img/logo.jpg" style="width: 150px; height: 200px">
 	<h1>Login</h1>
 	<label class="lb">User Name:</label>
 	<input class="in" type="text" placeholder="UserID" name="userID" id="userID">
