Created control msg to start the timers at the same time.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/homepage.html
+++ b/homepage.html
@@ -78,7 +78,7 @@
     </div>
     <div id="sidebar-r">
     	<button id="play" onclick="startPlay()"><strong>Play</strong></button> <br>
-    	<button id="challenge">Challenge</button> <br>
+    	<button id="challenge" onclick="startChallenge()">Challenge</button> <br>
     	<a href="https://www.google.com" id="cancel">Cancel</a>
     </div>
 </div>
