--- a/homepage.html
+++ b/homepage.html
@@ -74,6 +74,17 @@
         		<input type="radio" name="style_time" value="long_30+20*1"> 30+20*1&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="long_30+20*2"> 30+20*2&nbsp;&nbsp;
         	</div>
+			<br><br>
+			<div class="description" id="description">
+				Chess-fork game x+y*z: x -- time on the clock when the game starts (in minutes); y -- increment per move from move 1 (in seconds); z -- number of forks available to each player
+				<br><br>
+				Aggregate rating game: 1/0 point per board win/loss, 0.5 points per board draw. Player with more points across all boards wins. ELO ratings adjusted once according to this outcome.
+				<br><br>
+				Independent rating game: each board is an independent game. Players win, draw or lose in each board. ELO rating adjusted several times (as games finish) according to the outcome in each board.
+				<br><br>
+				This is a beta version of this website (Chess960-fork is not yet available), so please send us feedback, comments and suggestions for improvement at fork.chess@gmail.com.
+				<br><br>
+			</div>
         </div>
     </div>
     <div id="sidebar-r">
