Cosmetic change: Added label to explain ABORT, Modified alert message for abort();
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -47,6 +47,8 @@
   <label id="elo" hidden="true" style="font-weight: bold"></label><br>
   <button id="DLButton" class="btn btn-success" hidden="true" onclick="downloadGame()">DL Game</button>
   <button id="AbortBtn" class="btn btn-success" hidden="true" onclick="abort()">ABORT</button>
+  <br>
+  <label id="AbortLab" hidden="true" style="font-size: small">WHITE player will have 20 seconds to make the first move before the game ABORT.</label>
   <div class="container">
     <div class="game" id="game_1">
         <div id="opponentTimer_1" style="text-align: center">
