Added CHALLENGE modules, still need more work on challenges.html's button functions.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/top_ranking.html
+++ b/top_ranking.html
@@ -14,10 +14,10 @@
 <div id="center">
     <div id="sidebar-l">
     	<h1 id="user">User Name: FakeUser123</h1> <br>
-		<button class="side-l" id="newGame" onclick="newGameOnClick()">New Game</button><br>
-		<button class="side-l" id="challenges" onclick="displayChallenges()">Challenges</button><br>
-		<button class="side-l" id="profile" onclick="displayPlayerProfile()">Profile/Statistics</button><br>
-		<button class="side-l" id="logOut" onclick="onLogOut()">Log Out</button><br>
+		<button class="side-l btn btn-info" id="newGame" onclick="newGameOnClick()">New Game</button><br>
+		<button class="side-l btn btn-info" id="challenges" onclick="displayChallenges()">Challenges</button><br>
+		<button class="side-l btn btn-info" id="profile" onclick="displayPlayerProfile()">Profile/Statistics</button><br>
+		<button class="side-l btn btn-info" id="logOut" onclick="onLogOut()">Log Out</button><br>
     </div>
     <div id="main-wrapper">
         <div id="main">
