--- a/homepage.html
+++ b/homepage.html
@@ -16,10 +16,10 @@
 <div id="center">
     <div id="sidebar-l">
     	<h1 id="user">User Name: FakeUser123</h1> <br>
-		<button class="side-l" id="profile" onclick="displayPlayerProfile()">Profile/Statistics</button><br>
-		<button class="side-l" id="challenges" onclick="displayChallenges()">Challenges</button><br>
-		<button class="side-l" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
-		<button class="side-l" id="logOut" onclick="onLogOut()">Log Out</button><br>
+		<button class="side-l btn btn-info" id="profile" onclick="displayPlayerProfile()">Profile/Statistics</button><br>
+		<button class="side-l btn btn-info" id="challenges" onclick="displayChallenges()">Challenges</button><br>
+		<button class="side-l btn btn-info" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
+		<button class="side-l btn btn-info" id="logOut" onclick="onLogOut()">Log Out</button><br>
     </div>
     <div id="main-wrapper">
         <div id="main">
@@ -88,8 +88,9 @@
         </div>
     </div>
     <div id="sidebar-r">
-    	<button id="play" onclick="startPlay()"><strong>Play</strong></button> <br>
-		<button id="challenge" onclick="startChallenge()">Challenge</button> <br>
+    	<button id="play" class="btn btn-primary" onclick="startPlay()"><strong>Play</strong></button> <br>
+		<button id="challenge" class="btn btn-warning" onclick="startChallenge()">Challenge</button> <br>
+		<button id="cancel" class="invisible btn btn-link" onclick="removeChallenge()">Cancel</button>
     </div>
 </div>
 
