Updated the Challenge module, everything should work fine except the decline button.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/challenges.html
+++ b/challenges.html
@@ -13,7 +13,6 @@
 		th, td {
 			padding: 8px;
 			text-align: left;
-			/*border-bottom: 1px solid #ddd;*/
 		}
 		button{
 
@@ -28,10 +27,10 @@
 <div id="center">
     <div id="sidebar-l">
     	<h1 id="user">User Name: FakeUser123</h1> <br>
-    	<button class="side-l" id="newGame" onclick="newGameOnClick()">New Game</button><br>
-		<button class="side-l" id="challenges" onclick="displayChallenges()">Challenges</button><br>
-		<button class="side-l" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
-		<button class="side-l" id="logOut" onclick="onLogOut()">Log Out</button><br>
+    	<button class="side-l btn btn-info" id="newGame" onclick="newGameOnClick()">New Game</button><br>
+		<button class="side-l btn btn-info" id="challenges" onclick="displayChallenges()">Challenges</button><br>
+		<button class="side-l btn btn-info" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
+		<button class="side-l btn btn-info" id="logOut" onclick="onLogOut()">Log Out</button><br>
     </div>
     <div id="main-wrapper">
         <div id="main">
@@ -40,6 +39,7 @@
 			<table id="challengeTable" hidden="true">
 				<tr>
 					<th>From</th>
+					<th>Chess/Chess960</th>
 					<th>Rate Type</th>
 					<th>Game Spec</th>
 					<th> </th>
