Challenge Page UI modified, add Refresh Button and ELO rating column.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/challenges.html
+++ b/challenges.html
@@ -35,13 +35,16 @@
     <div id="main-wrapper">
         <div id="main">
         	<h1>Challenges Received:</h1>
+			<button class="btn btn-success" onclick="displayChallenges()">Refresh</button>
+			<br>
 			<div id="noChallenge" hidden="true">No Challenges Found, Come Back Later</div>
 			<table id="challengeTable" hidden="true">
 				<tr>
 					<th>From</th>
+					<th>ELO Rating</th>
 					<th>Chess/Chess960</th>
-					<th>Rate Type</th>
-					<th>Game Spec</th>
+					<th>Rating Type</th>
+					<th>Game Type</th>
 					<th> </th>
 					<th> </th>
 				</tr>
