Changed password login from text to encrypted password.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 	<input class="in" type="text" placeholder="UserID" name="userID" id="userID">
 	<br>
 	<label class="lb">Password:</label>
-	<input class="in" type="text" placeholder="Password" name="password" id="password">
+	<input class="in" type="password" placeholder="Password" name="password" id="password">
 	<br>
 	<button style="margin: 10px; width: 100px"  onclick="signIn()">Sign In </button>
 	<button style="margin: 10px; width: 100px" onclick="location.href='./createuser'">Sign Up</button>
