Added Main Menu button when the game ends.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -46,6 +46,7 @@
   </div>
   <label id="elo" hidden="true" style="font-weight: bold"></label><br>
   <button id="DLButton" class="btn btn-success" hidden="true" onclick="downloadGame()">DL Game</button>
+  <button id="mainMenu" class="btn btn-success" hidden="true" onclick="mainMenu()">Main Menu</button>
   <button id="AbortBtn" class="btn btn-success" hidden="true" onclick="abort()">ABORT</button>
   <br>
   <label id="AbortLab" hidden="true" style="font-size: small">WHITE player will have 20 seconds to make the first move before the game ABORT.</label>
