--- a/forgot.html
+++ b/forgot.html
@@ -50,7 +50,7 @@
 	<input class="in" type="text" placeholder="Password" name="password"> -->
 	<br>
 	<button style="margin: 10px; width: 100px" onclick="getInfo()">Retrieve</button>
-	<button style="margin: 10px; width: 100px" onclick="location.href='./login.html'">Cancle</button>
+	<button style="margin: 10px; width: 100px" onclick="location.href='./login.html'">Cancel</button>
 	<br>
 	<br>
 	<br>
