--- a/top_ranking.html
+++ b/top_ranking.html
@@ -34,20 +34,19 @@
 	        	</div>
         	</div> -->
         	<div class="game_type_btn">
-        		Choose A Game Type: <br>
+        		<br>
         		<input type="radio" name="game_type" value="chess" checked> CHESS&nbsp;&nbsp;
         		<input type="radio" name="game_type" value="chess960"> CHESS960
         	</div>
         	<br>
         	<div class="fork_btn">
-        		Choose A Fork Type: <br>
+        		Forks:
         		<input type="radio" name="fork_type" value="0" checked> 0&nbsp;&nbsp;
         		<input type="radio" name="fork_type" value="1"> 1&nbsp;&nbsp;
         		<input type="radio" name="fork_type" value="2"> 2&nbsp;&nbsp;
         	</div>
         	<br>
         	<div class="game_format_btn">
-        		Choose A Format Type: <br>
         		<input type="radio" name="format_type" value="bullet" checked> Bullet&nbsp;&nbsp;
         		<input type="radio" name="format_type" value="blitz"> Blitz&nbsp;&nbsp;
         		<input type="radio" name="format_type" value="rapid"> Rapid&nbsp;&nbsp;
@@ -59,47 +58,69 @@
         	<table class="result">
         		<tr>
         			<th> </th>
-        			<th>ELO Rating</th>
+        			<th>Username</th>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<th>ELO Rating</th>
         		</tr>
         		<tr>
         			<th>#1</th>
         			<td id="rank1">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank1ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#2</th>
         			<td id="rank2">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank2ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#3</th>
         			<td id="rank3">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank3ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#4</th>
         			<td id="rank4">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank4ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#5</th>
         			<td id="rank5">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank5ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#6</th>
         			<td id="rank6">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank6ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#7</th>
         			<td id="rank7">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank7ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#8</th>
         			<td id="rank8">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank8ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#9</th>
         			<td id="rank9">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank9ELO">ELO</td>
         		</tr>
         		<tr>
         			<th>#10</th>
         			<td id="rank10">ELO</td>
+					<th>&emsp;&emsp;&emsp;&emsp;</th>
+					<td id="rank10ELO">ELO</td>
         		</tr>
 
         	</table>
