--- a/games.html
+++ b/games.html
@@ -49,7 +49,7 @@
   <button id="mainMenu" class="btn btn-success" hidden="true" onclick="mainMenu()">Main Menu</button>
   <button id="AbortBtn" class="btn btn-success" hidden="true" onclick="abort()">ABORT</button>
   <br>
-  <label id="AbortLab" hidden="true" style="font-size: small">WHITE player will have 20 seconds to make the first move before the game ABORT.</label>
+  <label id="AbortLab" hidden="true" style="font-size: small">WHITE player has 20 seconds to make the first move before the game aborts</label>
   <div class="container">
     <div class="game" id="game_1">
         <div id="opponentTimer_1" style="text-align: center">
